[gd_scene load_steps=10 format=2]

[ext_resource path="res://Board.tscn" type="PackedScene" id=1]
[ext_resource path="res://background.gd" type="Script" id=2]
[ext_resource path="res://main.gd" type="Script" id=3]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://NextBrick.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
resource_name = "font1"
size = 24
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="InputEventAction" id=3]
action = "StartGame"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[node name="main" type="Node2D"]
modulate = Color( 0.832031, 0.80603, 0.80603, 1 )
script = ExtResource( 3 )

[node name="background" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Board" parent="." instance=ExtResource( 1 )]
position = Vector2( 2, 1 )
board_pos = Vector2( 10, 10 )

[node name="FlashTimer" type="Timer" parent="Board"]
wait_time = 0.1

[node name="PointLabel" type="Label" parent="."]
margin_left = 257.0
margin_top = 20.0
margin_right = 341.0
margin_bottom = 55.0
rect_pivot_offset = Vector2( -279, 35 )
custom_colors/font_color = Color( 0.207843, 0.941176, 0.101961, 1 )
custom_fonts/font = SubResource( 1 )
text = "Point:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PointData" type="Label" parent="."]
margin_left = 257.0
margin_top = 54.0
margin_right = 341.0
margin_bottom = 89.0
rect_pivot_offset = Vector2( -279, 35 )
custom_colors/font_color = Color( 0.207843, 0.941176, 0.101961, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CleanLabel" type="Label" parent="."]
margin_left = 258.0
margin_top = 98.0
margin_right = 365.0
margin_bottom = 133.0
rect_pivot_offset = Vector2( -279, 35 )
custom_colors/font_color = Color( 0.207843, 0.941176, 0.101961, 1 )
custom_fonts/font = SubResource( 1 )
text = "Cleans:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CleanData" type="Label" parent="."]
margin_left = 258.0
margin_top = 132.0
margin_right = 342.0
margin_bottom = 167.0
rect_pivot_offset = Vector2( -279, 35 )
custom_colors/font_color = Color( 0.207843, 0.941176, 0.101961, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelLabel" type="Label" parent="."]
margin_left = 258.0
margin_top = 172.0
margin_right = 346.0
margin_bottom = 207.0
rect_pivot_offset = Vector2( -741, -118 )
custom_colors/font_color = Color( 0.207843, 0.941176, 0.101961, 1 )
custom_fonts/font = SubResource( 1 )
text = "Level:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="levelData" type="Label" parent="."]
margin_left = 258.0
margin_top = 206.0
margin_right = 342.0
margin_bottom = 241.0
rect_pivot_offset = Vector2( -279, 35 )
custom_colors/font_color = Color( 0.207843, 0.941176, 0.101961, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextLabel" type="Label" parent="."]
margin_left = 257.0
margin_top = 257.0
margin_right = 345.0
margin_bottom = 292.0
rect_pivot_offset = Vector2( -741, -118 )
custom_colors/font_color = Color( 0.207843, 0.941176, 0.101961, 1 )
custom_fonts/font = SubResource( 1 )
text = "Next:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
modulate = Color( 0.839216, 0.305882, 0.152941, 1 )
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 264.0
margin_top = 360.0
margin_right = 359.0
margin_bottom = 405.0
custom_fonts/font = SubResource( 2 )
shortcut = SubResource( 4 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextBrick" type="Node2D" parent="."]
position = Vector2( 256, 296 )
script = ExtResource( 5 )

[node name="TickTimer" type="Timer" parent="."]

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="TickTimer" to="." method="_on_TickTimer_timeout"]
